Padding fix on mobile

--- a/app/dashboard/layout.module.scss
+++ b/app/dashboard/layout.module.scss
@@ -64,9 +64,6 @@
     }
 
     main {
-      padding: 3rem;
-      width: calc(100% - 21.4575rem);
-      height: calc(100vh - 6.75rem);
       overflow: auto;
 
       @include for-size(phone-only) {
@@ -87,7 +84,6 @@
         padding: 3rem;
         width: calc(100% - 21.4575rem);
         height: calc(100vh - 6.75rem);
-        overflow: auto;
       }
     }
   }
